# bevy-2d-menu-mask-transitions

./: .gitignore  Cargo.toml  LICENSE.md  README.md  justfile  shell.nix
.github/workflows/: rust.yml
examples/: basic.rs
src/: lib.rs  transition.wgsl
