[package]
name = "bevy_2d_menu_mask_transition"
description = "A Bevy plugin for creating smooth menu transitions with customizable masks."
license = "MIT"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/Lan-Game-Studios/bevy-2d-menu-mask-transitions"
homepage = "https://github.com/Lan-Game-Studios/bevy-2d-menu-mask-transitions"
documentation = "https://docs.rs/bevy_2d_menu_mask_transition"
readme = "README.md"
keywords = [
    "bevy",
    "plugin",
    "2d",
    "transitions",
    "menu",
]
categories = ["game-engines", "graphics", "rendering"]
exclude = ["assets/*", "docs/*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy_render = "0.14"
bevy_ecs = "0.14"
bevy_app = "0.14"
bevy_asset = "0.14"
bevy_time = "0.14"
bevy_ui = "0.14"
bevy_reflect = "0.14"
bevy_window = "0.14"
bevy_state = "0.14"
bevy_utils = "0.14"
bevy_hierarchy = "0.14"
bevy_log = "0.14"

[dev-dependencies]
bevy = { version = "0.14", features = ["webp"] }

[workspace.lints.clippy]
type_complexity = "allow"
